--- a/app/src/main/res/layout/row_series_detail_episode.xml
+++ b/app/src/main/res/layout/row_series_detail_episode.xml
@@ -3,21 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".browse.MainActivity">
-
+    android:layout_height="wrap_content">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rcBrowse"
+        android:id="@+id/rcEpisodes"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:scrollbars="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:itemCount="10"
-        tools:listitem="@layout/row_series" />
-
+        tools:itemCount="60"
+        tools:listitem="@layout/row_episode" />
 </androidx.constraintlayout.widget.ConstraintLayout>
