Complete SeriesDetail page EpisodeList Complete

--- a/app/src/main/res/layout/row_episode.xml
+++ b/app/src/main/res/layout/row_episode.xml
@@ -26,7 +26,7 @@
             tools:text="20" />
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/ivThumb"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:srcCompat="@mipmap/thumb" />
